# mask-based-2d-3d-pose-matching

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  camera_info.json  docker-compose.yml  run_benchmark_sweep.sh
benchmark-viewer/: main.py  pyproject.toml  server.py
benchmark-viewer/templates/: index.html
doc/: step2.md  step3.md
docs/: cache.md  method.md  param.md  proc_time.md  proc_time_pen.md  speed.md
src/: benchmark_main.cpp  bobyqa.h  cache_builder_main.cpp  cache_format.cpp  cache_format.h  cached_main.cpp  cached_pose_estimator.cpp  cached_pose_estimator.h  contour_sampler.cpp  contour_sampler.h  main.cpp  nelder_mead.h  pose_estimator.cpp  pose_estimator.h  profiling.h  refine_lm.cpp  refine_lm.h  rerun_visualizer.cpp  rerun_visualizer.h  verify_pose.cpp  visualize_poses_main.cpp  visualizer.h
